[package]
name = "server"
version = "0.1.0"
authors = ["Frankie Bagnardi <f.bagnardi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3.3", default-features = false }
anyhow = "1"
env_logger = "0.8"
html-escape = "0.2"
indoc = "1"
nanoid = "0.4"
owning_ref = "0.4"
rocksdb = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
swc = "0.28.1"
swc_common = "0.10.23"
swc_ecma_parser = "0.62.1"
thiserror = "1"
# chrono = "0.4"
